--- a/1.GerstnerWave/1.GerstnerWave.vcxproj.filters
+++ b/1.GerstnerWave/1.GerstnerWave.vcxproj.filters
@@ -6,25 +6,8 @@
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="res">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+      <UniqueIdentifier>{f4b9b378-783f-462b-9c97-5059b2c1c9e3}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="water-texture-2.tga">
-      <Filter>res</Filter>
-    </Image>
-    <Image Include="water-texture-2-normal.tga">
-      <Filter>res</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="wave-gerstner-light-fs.glsl">
-      <Filter>res</Filter>
-    </None>
-    <None Include="wave-gerstner-light-vs.glsl">
-      <Filter>res</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="util.cpp">
@@ -38,5 +21,21 @@
     <ClInclude Include="util.h">
       <Filter>src</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\media\1.GerstnerWave\water-texture-2.tga">
+      <Filter>res</Filter>
+    </Image>
+    <Image Include="..\media\1.GerstnerWave\water-texture-2-normal.tga">
+      <Filter>res</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\media\1.GerstnerWave\wave-gerstner-light-fs.glsl">
+      <Filter>res</Filter>
+    </None>
+    <None Include="..\media\1.GerstnerWave\wave-gerstner-light-vs.glsl">
+      <Filter>res</Filter>
+    </None>
   </ItemGroup>
 </Project>
